--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APACHE_VERSION=2.4.41
 
 DB_ROOT_PASSWORD=rootpassword
 DB_NAME=dbtest
-DB_USERNAME=otherUser
+DB_USERNAME=dbuser
 DB_PASSWORD=password
 
 PROJECT_ROOT=./public_html
