--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PHP_VERSION=7.2
 MYSQL_VERSION=8.0.18
 APACHE_VERSION=2.4.41
-ADMINER_VERSION=4.7
+ADMINER_VERSION=adminer
 
 DB_ROOT_PASSWORD=rootpassword
 DB_NAME=dbtest
