--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     container_name: apache
   mysql:
     image: mysql:${MYSQL_VERSION:-latest}
+    command: '--default-authentication-plugin=mysql_native_password'
     restart: always
     ports:
       - "3306:3306"
