--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
     restart: always
     ports:
       - 8080:8080
+    networks:
+      - backend
     container_name: adminer
 networks:
   frontend:
