--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,26 +6,15 @@ services:
       args:
        PHP_VERSION: ${PHP_VERSION}
     networks:
+      - frontend
       - backend
     volumes:
       - ${PROJECT_ROOT}/:/var/www/html/
-    container_name: php
-  apache:
-    build:
-      context: './apache/'
-      args:
-       APACHE_VERSION: ${APACHE_VERSION}
-    depends_on:
-      - php
-      - mysql
-    networks:
-      - frontend
-      - backend
+    container_name: php-apache
     ports:
       - "80:80"
     volumes:
       - ${PROJECT_ROOT}/:/var/www/html/
-    container_name: apache
   mysql:
     image: mysql:${MYSQL_VERSION:-latest}
     command: '--default-authentication-plugin=mysql_native_password'
