--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     container_name: mysql
 networks:
   frontend:
+    name: frontend
   backend:
+    name: backend
 volumes:
     data:
