--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -5,6 +5,5 @@ RUN apk update; \
     apk upgrade;
 
 # Copy apache vhost file to proxy php requests to php-fpm container
-COPY demo.apache.conf /usr/local/apache2/conf/demo.apache.conf
-RUN echo "Include /usr/local/apache2/conf/demo.apache.conf" \
-    >> /usr/local/apache2/conf/httpd.conf
+COPY mrcrb.apache.conf /usr/local/apache2/conf/mrcrb.apache.conf
+RUN echo "Include /usr/local/apache2/conf/mrcrb.apache.conf" >> /usr/local/apache2/conf/httpd.conf
