--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ APACHE_VERSION=2.4.41
 DB_ROOT_PASSWORD=rootpassword
 DB_NAME=dbtest
 DB_USERNAME=dbuser
-DB_PASSWORD=password
+DB_PASSWORD=dbpassw
 
 PROJECT_ROOT=./public_html
