--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,26 @@ services:
       args:
        PHP_VERSION: ${PHP_VERSION}
     networks:
-      - frontend
       - backend
     volumes:
       - ${PROJECT_ROOT}/:/var/www/html/
-    container_name: php-apache
+    container_name: php
+  apache:
+    build:
+      context: './apache/'
+      args:
+       APACHE_VERSION: ${APACHE_VERSION}
+    depends_on:
+      - php
+      - mysql
+    networks:
+      - frontend
+      - backend
     ports:
       - "80:80"
     volumes:
       - ${PROJECT_ROOT}/:/var/www/html/
+    container_name: apache
   mysql:
     image: mysql:${MYSQL_VERSION:-latest}
     restart: always
@@ -32,7 +43,7 @@ services:
     container_name: mysql
 networks:
   frontend:
-    name: frontend
+    name: fronted
   backend:
     name: backend
 volumes:
